# Data-Discovery-Scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md
examples/: config_sample.py  sample.env  suspicious_script.bat
src/sensitive_data_scanner/: __init__.py  __main__.py  cli.py  config.py  findings.py  scanner.py
src/sensitive_data_scanner/detection/: __init__.py  masking.py  patterns.py  script_warnings.py
src/sensitive_data_scanner/io/: __init__.py  file_type.py  file_walker.py  text_reader.py
src/sensitive_data_scanner/reporting/: __init__.py  console.py  json.py
tests/: __init__.py  test_cli.py  test_console.py  test_file_type.py  test_file_walker.py  test_json_reporting.py  test_masking.py  test_package_init.py  test_patterns.py  test_scanner.py  test_script_warnings.py  test_text_reader.py
