[project]
name = "sensitive-data-scanner"
version = "0.1.0"
description = "Lightweight CLI scanner for exposed sensitive data and script safety warnings."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Data Discovery Scanner Contributors" }
]
license = { text = "MIT" }
keywords = [
    "security",
    "cli",
    "scanner",
    "secrets",
    "static-analysis"
]
dependencies = []

[project.scripts]
sdscan = "sensitive_data_scanner.cli:main"
sds = "sensitive_data_scanner.cli:main"
sensitive-data-scanner = "sensitive_data_scanner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
