[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensitive-data-scanner"
version = "0.1.0"
description = "Lightweight CLI scanner for exposed sensitive data and script safety warnings."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Condor-1" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "security",
    "cli",
    "scanner",
    "secrets",
    "static-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
sdscan = "sensitive_data_scanner.cli:main"
sds = "sensitive_data_scanner.cli:main"
sensitive-data-scanner = "sensitive_data_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/Condor-1/Data-Discovery-Scanner"
Repository = "https://github.com/Condor-1/Data-Discovery-Scanner"
Issues = "https://github.com/Condor-1/Data-Discovery-Scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
